תיקון תקלת dll + תיקון תיקיית השפות לשרת אחרי publish

--- a/Client/Components/SubCategoryComponent.razor
+++ b/Client/Components/SubCategoryComponent.razor
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <div class="outerSaveBtns">
-                    <button class="primery-button" @onclick="addSubCategoryAndTransaction">שמירה ויצירת הזנה</button>
+                   @*<button class="primery-button" @onclick="addSubCategoryAndTransaction">שמירה ויצירת הזנה</button>*@
                     <button class="secondery-button" @onclick="saveUpdatedSubCat">שמירה וסיום</button>
                 </div>
 
