--- a/Client/Pages/StreakProgressPage.razor
+++ b/Client/Pages/StreakProgressPage.razor
@@ -69,8 +69,11 @@
     };
     List<string> rankPicSrc = new List<string>()
     {
-       "","","","","","",""
+       "../css/images/bronzeCoin.svg","../css/images/silverCoin.svg","../css/images/goldCoin.svg","../css/images/singleCashNote.svg","../css/images/cashNotes.svg","../css/images/goblet.svg","../css/images/diamond.svg"
     };
+
+
+
 
     protected override async Task OnInitializedAsync()
     {
